docs/versioned_docs/version-0.8.0/api/mellea/plugins/hooks/generation.mdx
---
title: "mellea.plugins.hooks.generation"
sidebar_label: "mellea.plugins.hooks.generation"
description: "Generation pipeline hook payloads."
---

Generation pipeline hook payloads.





## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationPreCallPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L14" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationprecallpayload}


Payload for `generation_pre_call` — before LLM backend call.

**Attributes:**
- `action`: The [`Component`](../../core/base#class-component) or [`CBlock`](../../core/base#class-cblock) about to be sent to the backend.
- `context`: The [`Context`](../../core/base#class-context) being used for this generation call.
- `model_options`: Dict of model options (writable — plugins may adjust temperature, etc.).
- `format`: Optional `BaseModel` subclass for constrained decoding (writable).
- `tool_calls`: Whether tool calls are enabled for this generation (writable).
- `generation_id`: Mellea-side hook correlation ID, distinct from the
provider-assigned `GenerationMetadata.response_id`. `None` when
the firing site does not generate one.
- `model`: Model identifier the backend is calling.
- `provider`: Provider name (e.g. `"openai"`, `"ollama"`).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationPostCallPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L42" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationpostcallpayload}


Payload for `generation_post_call` — fires once the model output is fully computed.

For lazy [`ModelOutputThunk`](../../core/base#class-modeloutputthunk) objects this hook fires inside
`ModelOutputThunk.astream` after `post_process` completes, so
`model_output.value` is guaranteed to be available. For already-computed
thunks (e.g. cached responses) it fires before `generate_from_context`
returns.

**Attributes:**
- `prompt`: The formatted prompt sent to the backend (str or list of message dicts).
- `model_output`: The fully-computed [`ModelOutputThunk`](../../core/base#class-modeloutputthunk).
- `latency_ms`: Elapsed milliseconds from the `generate_from_context` call
to when the value was fully materialized.
- `generation_id`: Mellea-side hook correlation ID matching the
corresponding pre_call payload, distinct from the provider-assigned
`GenerationMetadata.response_id`. `None` when the firing site did
not generate one.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationErrorPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L68" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationerrorpayload}


Payload for `generation_error` — fires when the LLM backend raises an exception.

This hook fires inside `ModelOutputThunk.astream` just before the exception
is re-raised, giving plugins a chance to observe (but not suppress) the error.

**Attributes:**
- `exception`: The exception raised by the backend.
- `model_output`: The [`ModelOutputThunk`](../../core/base#class-modeloutputthunk) at the time of the error.
- `generation_id`: Mellea-side hook correlation ID matching the
corresponding pre_call payload, distinct from the provider-assigned
`GenerationMetadata.response_id`. `None` when the firing site did
not generate one.
- `latency_ms`: Elapsed milliseconds from the call to the error. `0.0` when
the failure occurred before a call was issued (no `model_output`).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationEventPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L91" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationeventpayload}


Payload for `generation_event` — a milestone event during a single generation.

A generic carrier for events emitted mid-generation. Subscribers branch on
`event_name` and read the keys `data` carries for that event.

**Attributes:**
- `generation_id`: Mellea-side hook correlation ID matching the corresponding
pre_call payload, distinct from the provider-assigned
`GenerationMetadata.response_id`. `None` when the firing site did not
generate one.
- `event_name`: Identifies the event. Subscribers dispatch on this.
- `model`: Model identifier for the generation, or `None` if not yet known.
- `provider`: Provider name for the generation, or `None` if not yet known.
- `data`: Values for this event, keyed by name. The keys present depend on
`event_name` (see Known events above).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationBatchPreCallPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L123" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationbatchprecallpayload}


Payload for `generation_batch_pre_call` — fires once before a batch generation request.

Carries the action sequence being sent in the batch alongside batch-level
fields (`model`, `provider`, `num_actions`) describing the single
API call.

**Attributes:**
- `actions`: The action sequence being sent in the batch.
- `generation_id`: Correlation identifier set by the firing backend; matches
the corresponding `generation_batch_post_call` /
`generation_batch_error` payloads for the same call.
- `model_options`: Dict of model options (writable — plugins may adjust temperature, etc.).
- `format`: Optional structured-output format applied to the batch (writable).
- `tool_calls`: Whether tool calling is enabled (writable; typically `False` for raw).
- `num_actions`: Convenience copy of `len(actions)`.
- `model`: Model identifier the backend is calling.
- `provider`: Provider name (e.g. `"openai"`, `"ollama"`).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationBatchPostCallPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L153" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationbatchpostcallpayload}


Payload for `generation_batch_post_call` — fires once after a batch generation succeeds.

Carries the list of [`ModelOutputThunk`](../../core/base#class-modeloutputthunk) instances produced by the batch
alongside batch-level fields (`usage`, `model`, `provider`,
`latency_ms`) describing the single API call.

**Attributes:**
- `generation_id`: Correlation identifier from the matching pre_call.
- `model_outputs`: The list of [`ModelOutputThunk`](../../core/base#class-modeloutputthunk) instances built from
the API response, in batch order.
- `usage`: Aggregate token-usage dict (OpenAI-shape) for the whole batch.
- `model`: Model identifier from the call.
- `provider`: Provider name.
- `latency_ms`: Wall-clock duration of the API call in milliseconds.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `GenerationBatchErrorPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/generation.py#L178" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-generationbatcherrorpayload}


Payload for `generation_batch_error` — fires once when a batch generation request fails.

Carries the exception alongside batch-level fields (`model`,
`provider`, `latency_ms`) describing the failed API call. No
[`ModelOutputThunk`](../../core/base#class-modeloutputthunk) instances are present.

**Attributes:**
- `generation_id`: Correlation identifier from the matching pre_call.
- `exception`: The exception raised by the backend.
- `model`: Model identifier from the call.
- `provider`: Provider name.
- `latency_ms`: Wall-clock time-until-error in milliseconds.

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
